firefam-rs/tui/src/chatwidget/snapshots/firefam_tui__chatwidget__tests__compact_queues_user_messages_snapshot.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---









● Working (0s • esc to interrupt)

• Messages to be submitted at end of turn
  ↳ Steer submitted while /compact was running.
────────────────────────────────────────────────────────────────────────────────
  /tmp/project
› Ask Firefam to do anything
────────────────────────────────────────────────────────────────────────────────
  ? help · / commands and skills                   Read Only · gpt-5.5 default
