firefam-rs/tui/src/chatwidget/snapshots/firefam_tui__chatwidget__tests__completed_hook_output_precedes_following_assistant_message_snapshot.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: "format!(\"active hooks:\\n{}history:\\n{history}\", active_hook_blob(&chat))"
---
active hooks:
<empty>
history:
• PreToolUse hook (blocked)
  feedback: command blocked by policy

● The hook feedback was applied.
