firefam-rs/tui/src/chatwidget/snapshots/firefam_tui__chatwidget__tests__feedback_good_result_consent_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Upload logs?

  The following files will be sent:
    • firefam-logs.log
    • firefam-doctor-report.json
    • auto-review-rollout-thread-1.jsonl
    • firefam-connectivity-diagnostics.txt

› 1. Yes  Share the current Firefam session logs and diagnostics with the team
          for troubleshooting.
  2. No

  ↑/↓ Navigate · enter Select · tab Complete · esc to cancel
